Implemented the saving and loading of zone(Untested)

--- a/plugin.yml
+++ b/plugin.yml
@@ -11,7 +11,7 @@ website:
 commands:
  izone:
   description: iZone Command
-  usage: "/izone"
+  usage: "/izone <command> [parameters...] {optional...}"
   permission: izone.command.izone
 permissions:
  izone.command.izone:
